--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,6 +1,6 @@
 {
 		"name": "Go Anonymous!",
-		"version": "1.0.1",
+		"version": "1.0.2",
 		"description": "When you want an uninterrupted place to be.",
 		"manifest_version": 2,
 		"author": "Swateek Jena",
@@ -13,13 +13,18 @@
 			"default_icon": {
 				"16": "images/go_anon_16.png",
 				"24": "images/go_anon_24.png",
-				"32": "images/go_anon_32.png"
+				"32": "images/go_anon_32.png",
+				"48": "images/go_anon_48.png",
+				"128": "images/go_anon_128.png"
 			}
 		},
 		"icons": { 
 			"16": "images/go_anon_16.png",
 			"24": "images/go_anon_24.png",
-			"32": "images/go_anon_32.png" 
+			"32": "images/go_anon_32.png",
+			"48": "images/go_anon_48.png",
+			"128": "images/go_anon_128.png"
 		},
-		"permissions": ["activeTab"]
+		"permissions": ["activeTab"],
+		"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
