--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Go Anonymous! BETA",
-	"version": "2.0.0",
+	"name": "Go Anonymous!",
+	"version": "2.0.1",
 	"description": "When you want an uninterrupted place to be.",
 	"manifest_version": 3,
 	"author": "Swateek Jena",
