#1 - adding developer helps

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Hidden files
 .*
-dist
+!.gitignore
+
+# Build output
+dist/
 *.zip
+
+# macOS
+.DS_Store
+
+# IDEs
+.idea/
+.vscode/
+
+# Logs
+*.log
