--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,30 +1,30 @@
 {
-		"name": "Go Anonymous!",
-		"version": "1.0.2",
-		"description": "When you want an uninterrupted place to be.",
-		"manifest_version": 2,
-		"author": "Swateek Jena",
-		"homepage_url": "https://github.com/swateek/go-anonymous",
-		"background": {
-			"scripts": ["background.js"],
-			"persistent": false
-		},
-		"browser_action": {
-			"default_icon": {
-				"16": "images/go_anon_16.png",
-				"24": "images/go_anon_24.png",
-				"32": "images/go_anon_32.png",
-				"48": "images/go_anon_48.png",
-				"128": "images/go_anon_128.png"
-			}
-		},
-		"icons": { 
+	"name": "Go Anonymous!",
+	"version": "2.0.1",
+	"description": "When you want an uninterrupted place to be.",
+	"manifest_version": 3,
+	"author": "Swateek Jena",
+	"homepage_url": "https://github.com/swateek/go-anonymous",
+	"background": {
+		"service_worker": "background.js"
+	},
+	"action": {
+		"default_icon": {
 			"16": "images/go_anon_16.png",
 			"24": "images/go_anon_24.png",
 			"32": "images/go_anon_32.png",
 			"48": "images/go_anon_48.png",
 			"128": "images/go_anon_128.png"
-		},
-		"permissions": ["activeTab"],
-		"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
+		}
+	},
+	"icons": {
+		"16": "images/go_anon_16.png",
+		"24": "images/go_anon_24.png",
+		"32": "images/go_anon_32.png",
+		"48": "images/go_anon_48.png",
+		"128": "images/go_anon_128.png"
+	},
+	"permissions": [
+		"activeTab"
+	]
 }
